# kernel-gpt-v01

./: .autopush  .gitignore  LICENSE  README.md  pyproject.toml
docs/: architecture.md
examples/: attention_example.py  compare_with_autokernel.py  matmul_example.py
models/: __init__.py  matmul.py
scripts/: auto_push.sh
src/kernel_gpt/: __init__.py  __main__.py
src/kernel_gpt/benchmark/: __init__.py  profiler.py  reporter.py  runner.py
src/kernel_gpt/hardware_model/: __init__.py  amd.py  base.py  nvidia.py  roofline.py
src/kernel_gpt/interface/: __init__.py  api.py  cli.py
src/kernel_gpt/synthesis_engine/: __init__.py  generator.py  llm_clients.py  llm_interface.py  spec.py  strategy.py
src/kernel_gpt/verifier/: __init__.py  memory.py  numerical.py  static.py
templates/cuda/: common.cuh.jinja  matmul.cuh.jinja
templates/triton/: matmul.py.jinja
tests/: test_benchmark.py  test_hardware_model.py  test_llm_clients.py  test_synthesis.py  test_verifier.py
